--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "1.0.0",
+    "@tailwindcss/forms": "^0.3.2",
+    "axios": "^0.21.1",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "6.15.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/react": "^17.0.4"
+    "@types/react": "^17.0.4",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.1.2"
   }
 }
